--- a/src/app/shared/components/create-record/create-record.component.scss
+++ b/src/app/shared/components/create-record/create-record.component.scss
@@ -13,13 +13,14 @@
     resize: none;
   }
 
+  &__date-picker::ng-deep {
+     .mat-mdc-form-field-icon-suffix {
+      padding: 0 4px !important;
+    }
+  }
+
   .date-picker {
     &__toggle {
-      position: absolute;
-      top: -34px;
-      right: 6px;
-
-      font-size: 20px;
       color: $color-button-icon;
     }
   }
