--- a/src/app/shared/components/feedback-dialog/feedback-dialog.component.scss
+++ b/src/app/shared/components/feedback-dialog/feedback-dialog.component.scss
@@ -3,19 +3,7 @@
 
 .feedback {
   &__note {
-    height: 128px;
+    height: 128px !important;
     resize: none;
-  }
-
-  .mat-form-field {
-    margin-bottom: 12px;
-
-    &:not(:last-child) {
-      margin-bottom: 20px;
-    }
-  }
-
-  input:placeholder-shown {
-    font-size: 14px;
   }
 }
