--- a/src/styles/material/_input.scss
+++ b/src/styles/material/_input.scss
@@ -50,6 +50,7 @@
 
 .mat-mdc-form-field-input-control {
   letter-spacing: normal !important;
+  height: 24px !important;
 }
 
 .mat-mdc-form-field-icon-suffix {
