--- a/src/app/shared/components/create-car-dialog/create-car-dialog.component.html
+++ b/src/app/shared/components/create-car-dialog/create-car-dialog.component.html
@@ -5,52 +5,81 @@
               (submit)="onSubmit()"
   >
     <form content [formGroup]="carForm" class="create-car-dialog__content">
-      <app-tabs [tabs]="['DIALOG.COMMON', 'DIALOG.PARTS']" tabWidth="140" bordered="true" [badgesVisibilityArray]="[carForm.get('name').valid, carForm.get('parts').valid]">
+      <app-tabs [tabs]="['DIALOG.COMMON', 'DIALOG.PARTS']" tabWidth="140" bordered="true">
         <div tab-1>
           <div class="create-car-dialog__container">
-            <mat-form-field [floatLabel]="'always'">
-              <mat-label>{{"DIALOG.FIELDS.NAME" | translate}}</mat-label>
-              <input cdkFocusInitial [required]="true" [formControlName]="'name'" matInput>
-              <mat-error>
-                {{"DIALOG.VALIDATIONS.NAME" | translate}}
-              </mat-error>
-            </mat-form-field>
-            <mat-form-field [floatLabel]="'always'">
-              <mat-label>{{"DIALOG.FIELDS.VEHICLE_ID" | translate}}</mat-label>
-              <input [formControlName]="'vehicleId'" matInput>
-            </mat-form-field>
-            <mat-form-field [floatLabel]="'always'">
-              <mat-label>{{"DIALOG.FIELDS.MAKE" | translate}}</mat-label>
-              <input [formControlName]="'make'" matInput>
-            </mat-form-field>
-            <mat-form-field [floatLabel]="'always'">
-              <mat-label>{{"DIALOG.FIELDS.MODEL" | translate}}</mat-label>
-              <input [formControlName]="'model'" matInput>
-            </mat-form-field>
-            <mat-form-field [floatLabel]="'always'">
-              <mat-label>{{"DIALOG.FIELDS.YEAR" | translate}}</mat-label>
-              <input [formControlName]="'year'" matInput>
-              <mat-error *ngIf="carForm.get('year').hasError('number')">
-                {{carForm.get('year').getError('number').value | translate}}
-              </mat-error>
-              <mat-error *ngIf="carForm.get('year').hasError('positiveNumber')">
-                {{carForm.get('year').getError('positiveNumber').value | translate}}
-              </mat-error>
-            </mat-form-field>
-            <mat-form-field [floatLabel]="'always'">
-              <mat-label>{{"DIALOG.FIELDS.ENGINE" | translate}}</mat-label>
-              <input [formControlName]="'engine'" matInput>
-            </mat-form-field>
-            <mat-form-field [floatLabel]="'always'">
-              <mat-label>{{"DIALOG.FIELDS.MILEAGE" | translate}}</mat-label>
-              <input [formControlName]="'mileage'" matInput>
-              <mat-error *ngIf="carForm.get('mileage').hasError('number')">
-                {{carForm.get('mileage').getError('number').value | translate}}
-              </mat-error>
-              <mat-error *ngIf="carForm.get('mileage').hasError('positiveNumber')">
-                {{carForm.get('mileage').getError('positiveNumber').value | translate}}
-              </mat-error>
-            </mat-form-field>
+            <div>
+              <div class="form-field__title">
+                {{"DIALOG.FIELDS.NAME" | translate}}
+                <span class="form-field__title-required">*</span>
+              </div>
+              <mat-form-field>
+                <input cdkFocusInitial [required]="true" [formControlName]="'name'" matInput>
+                <mat-error>
+                  {{"DIALOG.VALIDATIONS.NAME" | translate}}
+                </mat-error>
+              </mat-form-field>
+            </div>
+            <div>
+              <div class="form-field__title">
+                {{"DIALOG.FIELDS.VEHICLE_ID" | translate}}
+              </div>
+              <mat-form-field>
+                <input [formControlName]="'vehicleId'" matInput>
+              </mat-form-field>
+            </div>
+            <div>
+              <div class="form-field__title">
+                {{"DIALOG.FIELDS.MAKE" | translate}}
+              </div>
+              <mat-form-field>
+                <input [formControlName]="'make'" matInput>
+              </mat-form-field>
+            </div>
+            <div>
+              <div class="form-field__title">
+                {{"DIALOG.FIELDS.MODEL" | translate}}
+              </div>
+              <mat-form-field>
+                <input [formControlName]="'model'" matInput>
+              </mat-form-field>
+            </div>
+            <div>
+              <div class="form-field__title">
+                {{"DIALOG.FIELDS.YEAR" | translate}}
+              </div>
+              <mat-form-field>
+                <input [formControlName]="'year'" matInput>
+                <mat-error *ngIf="carForm.get('year').hasError('number')">
+                  {{carForm.get('year').getError('number').value | translate}}
+                </mat-error>
+                <mat-error *ngIf="carForm.get('year').hasError('positiveNumber')">
+                  {{carForm.get('year').getError('positiveNumber').value | translate}}
+                </mat-error>
+              </mat-form-field>
+            </div>
+            <div>
+              <div class="form-field__title">
+                {{"DIALOG.FIELDS.ENGINE" | translate}}
+              </div>
+              <mat-form-field>
+                <input [formControlName]="'engine'" matInput>
+              </mat-form-field>
+            </div>
+            <div>
+              <div class="form-field__title">
+                {{"DIALOG.FIELDS.MILEAGE" | translate}}
+              </div>
+              <mat-form-field>
+                <input [formControlName]="'mileage'" matInput>
+                <mat-error *ngIf="carForm.get('mileage').hasError('number')">
+                  {{carForm.get('mileage').getError('number').value | translate}}
+                </mat-error>
+                <mat-error *ngIf="carForm.get('mileage').hasError('positiveNumber')">
+                  {{carForm.get('mileage').getError('positiveNumber').value | translate}}
+                </mat-error>
+              </mat-form-field>
+            </div>
           </div>
         </div>
         <div class="create-car-dialog__parts-container" tab-2>
@@ -68,7 +97,7 @@
                       {{"DIALOG.VALIDATIONS.NAME" | translate}}
                     </mat-error>
                   </mat-form-field>
-                  <app-button button-transparent (click)="onDeletePart(i)">
+                  <app-button class="create-car-dialog__delete-button" button-transparent (click)="onDeletePart(i)">
                     <mat-icon class="create-car-dialog__delete-button-icon">delete</mat-icon>
                   </app-button>
                 </div>
