refactor(table): Added empty message text

--- a/src/app/shared/components/table/cell-mileage/cell-mileage.component.html
+++ b/src/app/shared/components/table/cell-mileage/cell-mileage.component.html
@@ -1,4 +1,4 @@
 <span class="cell-mileage" [attr.data-csv]="value | numberSeparator:this.settingsService.settings.region">
-  {{value | numberSeparator:this.settingsService.settings.region}}
+  {{value | numberSeparator:this.settingsService.settings.region:true}}
   <cm-mileage></cm-mileage>
 </span>
