--- a/src/app/shared/components/table/table-panel/table-panel.component.html
+++ b/src/app/shared/components/table/table-panel/table-panel.component.html
@@ -1,15 +1,15 @@
 <section class="table-panel">
-  @if (selectedRowsCount) {
+  @if (selectedRowsCount()) {
     <div class="table-panel__selection">
-      <span [ngPlural]="selectedRowsCount" class="table-panel__selection-text">
+      <!-- <span [ngPlural]="selectedRowsCount" class="table-panel__selection-text">
         {{selectedRowsCount}}
         <ng-template ngPluralCase="=1">row</ng-template>
         <ng-template ngPluralCase="other">rows</ng-template>
-      </span>
+      </span> -->
       <app-button button-transparent (click)="move.emit()">
         <mat-icon>compare_arrows</mat-icon>
       </app-button>
-      <app-button button-transparent>
+      <app-button button-transparent (click)="delete.emit()">
         <mat-icon class="table-panel__selection-delete" svgIcon="trash"></mat-icon>
       </app-button>
     </div>
@@ -18,11 +18,11 @@
   <app-button button-transparent (click)="add.emit()">
     <mat-icon>add</mat-icon>
   </app-button>
-  <app-button button-transparent [matMenuTriggerFor]="contextMenu">
+  <app-button *ngIf="hasData()" button-transparent [matMenuTriggerFor]="contextMenu">
     <mat-icon>file_download</mat-icon>
   </app-button>
-  <mat-divider vertical="true"></mat-divider>
-  <cm-column-selector [columnConfigs]="columnSchemas" (onVisibilityChanged)="onVisibilityChanged.emit($event)">
+  <mat-divider *ngIf="hasData()" vertical="true"></mat-divider>
+  <cm-column-selector *ngIf="hasData()" [columnConfigs]="columnSchemas()" (onVisibilityChanged)="onVisibilityChanged.emit($event)">
   </cm-column-selector>
 </section>
 
