--- a/src/app/shared/components/table/table.component.scss
+++ b/src/app/shared/components/table/table.component.scss
@@ -49,6 +49,28 @@
     border-spacing: 0 4px;
   }
 
+  &__empty {
+    height: 164px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: $font-color-secondary;
+    gap: 4px;
+  }
+
+  &__empty-text {
+    font-size: 18px;
+  }
+
+
+  &__empty-icon {
+    --icon-size: 48px;
+    height: var(--icon-size);
+    width: var(--icon-size);
+    font-size: var(--icon-size);
+  }
+
   &__head-row {
     height: 42px;
 
