--- a/src/app/shared/components/table/table.component.scss
+++ b/src/app/shared/components/table/table.component.scss
@@ -17,6 +17,10 @@
   overflow-x: auto;
   box-sizing: border-box;
 
+  &--transparent {
+    box-shadow: none;
+  }
+
   &__table-section {
     @include mixins.scrollable-horizontal;
   }
