--- a/src/app/shared/components/release-notes/release-notes.component.html
+++ b/src/app/shared/components/release-notes/release-notes.component.html
@@ -1,22 +1,18 @@
 <section class="release-notes">
-  <app-dialog [title]="'Car Maintenance 4.3.0'"
+  <app-dialog [title]="'Car Maintenance ' + appConfig.version"
               hideFooter="true"
               (close)="dialogRef.close()"
     >
     <main content class="release-notes__content">
       <div class="container">
-        <h3 class="release-notes__title">{{releaseNote.welcomePage}}</h3>
-        <ul class="release-notes__list">
-          <li class="release-notes__text">{{releaseNote.progress[1]}}</li>
-        </ul>
-        <h3 class="release-notes__title">{{releaseNote.dashboard}}</h3>
-        <ul class="release-notes__list">
-          <li class="release-notes__text">{{releaseNote.progress[2]}}</li>
-        </ul>
-        <h3 class="release-notes__title">{{releaseNote.settings}}</h3>
-        <ul class="release-notes__list">
-          <li class="release-notes__text">{{releaseNote.progress[0]}}</li>
-        </ul>
+        @for (note of releaseNotes; track $index) {
+          <h3 class="release-notes__title">{{note.title}}</h3>
+          <ul class="release-notes__list">
+            @for (text of note.news; track $index) {
+              <li class="release-notes__text">{{text}}</li>
+            }
+          </ul>
+        }
       </div>
     </main>
   </app-dialog>
