feat(#134): Implemented labels for records

--- a/src/app/shared/components/create-record/create-record.component.html
+++ b/src/app/shared/components/create-record/create-record.component.html
@@ -69,6 +69,42 @@
       </div>
 
       <div>
+        <div class="form-field__title">
+          {{"DIALOG.FIELDS.LABELS" | translate}}
+        </div>
+
+        <mat-form-field class="form-field__labels">
+          <mat-chip-grid #labelsRef [formControlName]="'labels'">
+          @for (label of recordForm.get('labels').value; track $index) {
+            <mat-chip-row (removed)="removeLabel($index)">
+              {{label}}
+              <button class="create-record__chip-remove-button" matChipRemove>
+                <mat-icon>close</mat-icon>
+              </button>
+            </mat-chip-row>
+          }
+          </mat-chip-grid>
+
+          <input [placeholder]="'DIALOG.PLACEHOLDERS.NEW_LABEL' | translate"
+                 [matChipInputFor]="labelsRef"
+                 [(ngModel)]="currentLabel"
+                 [ngModelOptions]="{standalone: true}"
+                 [matAutocomplete]="auto"
+                 (matChipInputTokenEnd)="addLabel($event)"
+          />
+
+          <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selectLabel($event)">
+            @for (label of filteredLabels(); track label) {
+              <mat-option [value]="label">
+                {{label}}
+              </mat-option>
+            }
+          </mat-autocomplete>
+          <mat-hint>{{'DIALOG.HINTS.LABELS' | translate}}</mat-hint>
+        </mat-form-field>
+      </div>
+
+      <div>
         <div class="form-field__title">{{"DIALOG.FIELDS.COMMENT" | translate}}</div>
         <mat-form-field>
           <textarea class="create-record__note" [formControlName]="'notes'" matInput></textarea>
