--- a/src/app/shared/components/table/table.component.scss
+++ b/src/app/shared/components/table/table.component.scss
@@ -125,6 +125,10 @@
     text-align: end;
   }
 
+  &--column-labels {
+    text-align: center;
+  }
+
   &--column-cost {
     text-align: -webkit-right;
   }
